--- a/trunk/public/css/form.css
+++ b/trunk/public/css/form.css
@@ -1,15 +1,20 @@
 .label {
-	width: 8em;
-	font-weight: bold;
-	padding: 10px 0;
+    width: 4em;
+    font-weight: bold;
+    padding: 10px 0;
 }
 
 .input_field input {
-	padding: 5px;
+    padding: 5px;
+}
+
+.submit {
+    padding-top: 0.5em;
 }
 
 .submit input {
-	background-color: #00ABA9;
-	color: #FFFFFF;
-	padding: 10px;
+    background-color: #F09609;
+    color: #FFFFFF;
+    padding: 5px 20px;
+    border: 0;
 }
