--- a/trunk/public/css/global.css
+++ b/trunk/public/css/global.css
@@ -64,17 +64,20 @@ nav a:hover {
     background-color: #dddddd;
 }
 
-
 #main {
     position: absolute;
-    left:190px;
-    font-size:110%;
-    padding:1em;
+    left: 190px;
+    font-size: 110%;
+    padding: 1em;
+    right: 0;
 }
 
 #main h1 {
-    font-size:150%;
+    font-size: 150%;
+    text-align: center;
+    margin-bottom: 1em;
 }
+
 footer {
     position: absolute;
     text-align: center;
