--- a/trunk/public/css/form.css
+++ b/trunk/public/css/form.css
@@ -2,46 +2,56 @@
  * 表單主體
  */
 .input_form {
-	background-color: #F1F1F1;
-	padding: 1em;
-	border: 1px solid #E5E5E5;
-	width: 25em;
+    background-color: #F1F1F1;
+    padding: 1em;
+    border: 1px solid #E5E5E5;
+    width: 30em;
+}
+
+.form_table {
+    border-collapse: separate;
+    border-spacing: 5px 7px;
 }
 
 .form_table caption {
-	margin-bottom: 0.5em;
-	font-size: 120%;
+    margin-bottom: 0.5em;
+    font-size: 120%;
 }
 
 .form_table td {
-	padding: 2px;
+    padding: 2px;
 }
 
 .label {
-	width: 4em;
-	font-weight: bold;
-	padding: 10px 0;
-	color: #222222;
-	font-size: 90%;
+    width: 4em;
+    font-weight: bold;
+    padding: 10px 0;
+    color: #222222;
+    font-size: 90%;
 }
 
 .input_field input {
-	padding: 5px;
+    padding: 5px;
+}
+
+.input_field input:focus {
+    background-color: #FFFF99;
 }
 
 .input_error {
-	font-size: 80%;
-	color: red;
-	padding-left: 0.8em !important;
+    font-size: 80%;
+    color: red;
+    padding-left: 0.8em !important;
 }
 
 .submit {
-	padding-top: 0.5em;
+    padding-top: 0.5em;
+    text-align: right;
 }
 
 .submit input[type="submit"] {
-	background-color: #F09609;
-	color: #FFFFFF;
-	padding: 5px 20px;
-	border: 0;
+    background-color: #F09609;
+    color: #FFFFFF;
+    padding: 5px 20px;
+    border: 0;
 }
