--- a/trunk/public/css/table_global.css
+++ b/trunk/public/css/table_global.css
@@ -1,22 +1,22 @@
-table {
+.dataList {
     margin: 1em 0;;
 }
 
-td, th {
+.dataList td, .dataList th {
     padding: 5px 4em 5px 5px;
 }
 
-.edit, .delete {
+.dataList .edit, .dataList .delete {
     padding: 5px;
 }
 
-th {
+.dataList th {
     border-bottom: 1px solid #FFFFFF;
     color: #FFFFFF;
     background-color: #00ABA9;
 }
 
-td {
+.dataList td {
     border-bottom: 1px solid #FFFFFF;
     background-color: #E8EDFF;
 }
