--- a/trunk/public/css/form.css
+++ b/trunk/public/css/form.css
@@ -8,21 +8,21 @@
     width: 30em;
 }
 
-.form_table {
+.input_form .form_table {
     border-collapse: separate;
     border-spacing: 5px 7px;
 }
 
-.form_table caption {
+.input_form .form_table caption {
     margin-bottom: 0.5em;
     font-size: 120%;
 }
 
-.form_table td {
+.input_form .form_table td {
     padding: 2px;
 }
 
-.label {
+.input_form .label {
     width: 4em;
     font-weight: bold;
     padding: 10px 0;
@@ -30,26 +30,26 @@
     font-size: 90%;
 }
 
-.input_field input {
+.input_form .input_field input {
     padding: 5px;
 }
 
-.input_field input:focus {
+.input_form .input_field input:focus {
     background-color: #FFFF99;
 }
 
-.input_error {
+.input_form .input_error {
     font-size: 80%;
     color: red;
     padding-left: 0.8em !important;
 }
 
-.submit {
+.input_form .submit {
     padding-top: 0.5em;
     text-align: right;
 }
 
-.submit input[type="submit"] {
+input[type="submit"] {
     background-color: #F09609;
     color: #FFFFFF;
     padding: 5px 20px;
