--- a/laravel4/public/css/global/default.css
+++ b/laravel4/public/css/global/default.css
@@ -55,7 +55,7 @@ nav ul {
 }
 
 nav .nav_title {
-    background-color: #825A2C;
+    background-color: #FA6800;
     color: #FFFFFF;
     font-size: 130%;
     padding: 5px;
