--- a/laravel4/public/css/class_year.css
+++ b/laravel4/public/css/class_year.css
@@ -2,18 +2,18 @@
  * 年級選單樣式
  */
 #year_row {
-    background-color: #1BA1E2;
+    border: 1px solid #647687;
     float: left;
-    padding: 10px;
-    width: 50%;
+    padding: 5px;
+    width: 90%;
 }
 
 .year_item {
     display: inline-block;
     background-color: #008A00;
-    padding: 10px;
+    padding: 8px;
     width: 5em;
-    margin: 5px;
+    margin: 3px;
     text-align: center;
 }
 
