- 教師職稱整合教師資料

--- a/laravel4/public/css/global/default.css
+++ b/laravel4/public/css/global/default.css
@@ -183,3 +183,11 @@ footer a {
     font-weight: bold;
     font-size: 100%;
 }
+
+/**
+ *  組件：警告
+ */
+.alert {
+    color: red;
+    font-weight: bold;
+}
