--- a/current/public/css/class_year.css
+++ b/current/public/css/class_year.css
@@ -2,19 +2,20 @@
  * 年級選單樣式
  */
 #year_row {
-    padding: 5px;
-    width: 90%;
+	padding: 5px;
+	width: 90%;
+	border-bottom: 2px solid #666666;
 }
 
 .year_item {
-    display: inline-block;
-    margin: 3px;
-    padding: 8px;
-    width: 7em;
-    background-color: #008A00;
-    text-align: center;
+	display: inline-block;
+	margin: 3px;
+	padding: 8px;
+	width: 7em;
+	background-color: #008A00;
+	text-align: center;
 }
 
 .year_item_selected {
-    border: 3px solid #F0A30A;
+	border: 3px solid #F0A30A;
 }
