--- a/current/public/css/form/class_year_form.css
+++ b/current/public/css/form/class_year_form.css
@@ -4,50 +4,42 @@
  * 年級表單樣式
  */
 #year_form {
-    display: inline-block;
-    float: left;
-    margin: 0.5em 1.5em 0 7px;
+	display: inline-block;
+	float: left;
+	margin: 0.5em 1.5em 0 7px;
 }
 
 #year_form .delete_link {
-    display: inline-block;
-    float: left;
-    padding: 5px 20px;
-    width: 9em;
+	float: left;
 }
 
 #year_form_command {
-    margin-top: 1em;
-    text-align: right;
+	margin-top: 1em;
+	text-align: right;
 }
 
-#year_name_label {
-    width: 7em;
-    font-size: 110%;
+#year_name_label * {
+	display: inline-block;
 }
 
 /**
  * 班級表單樣式
  */
 #class_area {
-    display: inline-block;
-    margin-top: 0.5em;
+	display: inline-block;
+	margin-top: 0.5em;
 }
 
 #class_area .classes_name {
-    padding: 5px 1em;
-    width: 7em;
+	padding: 5px 1em;
+	width: 7em;
 }
 
 #class_area .classes_name input[type="text"] {
-    width: 6em;
+	width: 6em;
 }
 
 #class_area .classes_command {
-    padding: 0;
-    width: 12em;
-}
-
-#class_area .classes_command .delete_link {
-    display: inline-block;
+	padding: 0;
+	width: 12em;
 }
