--- a/current/public/css/form/classroom_form.css
+++ b/current/public/css/form/classroom_form.css
@@ -1,26 +1,10 @@
 @import "default.css";
 
-/**
- *  覆寫form.css設定
- */
-#classroom_name_label {
-    width: 5em;
-    font-size: 110%;
+.form_list * {
+	display: inline-block;
 }
 
-.input_form {
-    padding: 0;
-    width: 20em;
-}
-
-#classroom_form {
-    margin-top: 1em;
-}
-
-.classroom_command {
-    width: 12em;
-}
-
-.classroom_command .delete_link {
-    display: inline-block;
+.form_list {
+	margin-bottom: 1em;
+	border-bottom: 2px solid #666666;
 }
