--- a/current/public/css/form/default.css
+++ b/current/public/css/form/default.css
@@ -1,57 +1,42 @@
 /**
  * 表單主體
  */
-.input_form {
-    padding: 1em;
-    border: 1px solid #E5E5E5;
-    background-color: #F1F1F1;
+.form_list .description {
+	margin-bottom: 0.5em;
+	color: #6d8764;
+	font-size: 120%;
 }
 
-.input_form .form_table {
-    border-spacing: 5px 7px;
-    border-collapse: separate;
+.form_list li {
+	padding: 2px;
+	font-weight: bold;
 }
 
-.input_form .form_table caption {
-    margin-bottom: 0.5em;
-    font-size: 120%;
+.form_list .input_field {
+	margin: 0.5em 0 1em 1em;
+	font-weight: normal;
 }
 
-.input_form .form_table td {
-    padding: 2px;
+.form_list .input_error {
+	padding-left: 0.5em;
+	color: #FF0000;
+	font-weight: normal;
+	font-size: 90%;
 }
 
-.input_form .label {
-    padding: 10px 0;
-    width: 4em;
-    color: #222222;
-    font-weight: bold;
-    font-size: 90%;
+input[type="text"], input[type="password"], select {
+	padding: 5px;
 }
 
-input[type="text"], select {
-    padding: 5px;
-}
-
-input[type="text"]:focus {
-    background-color: #FFFF99;
-}
-
-.input_form .input_error {
-    padding-left: 0.8em !important;
-    color: red;
-    font-size: 80%;
-}
-
-.input_form .submit {
-    padding-top: 0.5em;
-    text-align: right;
+input[type="text"]:focus, input[type="password"]:focus, select:focus {
+	background-color: #FFFF99;
 }
 
 input[type="submit"] {
-    padding: 2px 20px;
-    border: 0;
-    background-color: #F09609;
-    color: #FFFFFF;
-    cursor: pointer;
+	padding: 2px 20px;
+	border: 0;
+	background-color: #F09609;
+	color: #FFFFFF;
+	font-weight: normal;
+	cursor: pointer;
 }
