--- a/current/public/css/global/default.css
+++ b/current/public/css/global/default.css
@@ -39,16 +39,21 @@ header {
 
 #login {
 	position: absolute;
-	top: 10px;
+	top: 0;
 	right: 0;
-	width: 4em;
 	background-color: #E671B8;
 	text-align: left;
 }
 
+#login .info {
+	display: inline-block;
+	padding-left: 16px;
+	font-size: 120%;
+}
+
 #login a {
-	display: block;
-	padding: 0.5em;
+	display: inline-block;
+	padding: 8px;
 }
 
 /**
