--- a/current/public/css/column_item/style_2.css
+++ b/current/public/css/column_item/style_2.css
@@ -1,9 +1,16 @@
 @import url(default.css);
 
 .column_item_style_2 li {
-	background-color: #1BA1E2;
+	background-color: #DD4B39;
 }
 
-.column_item_style_2 .column_item_selected {
-	border: 3px solid #F0A30A;
+.column_item_style_2 li a:hover {
+	margin-right: -0.5em;
+	background-color: #00ABA9;
+}
+
+.column_item_style_2 .column_item_selected a {
+	margin-right: -0.5em;
+	background-color: #00ABA9;
+	text-shadow: 2px 2px #333333;
 }
