--- a/current/public/css/row_item/style_1.css
+++ b/current/public/css/row_item/style_1.css
@@ -4,6 +4,10 @@
 	background-color: #1BA1E2;
 }
 
-.row_item_style_1 .row_item_selected {
-	border: 3px solid #F0A30A;
+.row_item_style_1 li a:hover {
+	background-color: #A0522D;
+}
+
+.row_item_style_1 .row_item_selected a {
+	background-color: #A0522D;
 }
