--- a/current/public/css/row_item/style_2.css
+++ b/current/public/css/row_item/style_2.css
@@ -4,6 +4,11 @@
 	background-color: #008A00;
 }
 
-.row_item_style_2 .row_item_selected {
-	border: 3px solid #F0A30A;
+.row_item_style_2 li a:hover {
+	background-color: #AA00FF;
+}
+
+.row_item_style_2 .row_item_selected a {
+	background-color: #AA00FF;
+	text-shadow: 2px 2px #333333;
 }
