- 建立顯示班級、教師、教室排課界面（尚未完成超連結）

--- a/current/public/css/column_item/style_1.css
+++ b/current/public/css/column_item/style_1.css
@@ -1,6 +1,6 @@
 @import url(default.css);
 
-.column_item_style_1 li {
+.column_item_style_1 li, .column_item_style_1 .title {
 	background-color: #1BA1E2;
 }
 
