--- a/current/public/css/column_item/default.css
+++ b/current/public/css/column_item/default.css
@@ -4,13 +4,14 @@
 }
 
 .column_item li {
+	margin: 5px 0;
 	min-width: 5em;
-	border: 3px solid #FFFFFF;
 }
 
-.column_item li a {
+.column_item li a, .column_item .title {
 	display: block;
-	padding: 5px;
+	padding: 8px;
+	color: #FFFFFF;
 	text-align: center;
 }
 
