- 完成排課界面重構 - 完成班級、教師、教室設定中，已排課的查詢界面

--- a/current/public/css/account_edit.css
+++ b/current/public/css/account_edit.css
@@ -1,8 +1,6 @@
-.input_form {
-	float: left;
-}
-
 #teacher_courseunit {
-	float: right;
-	margin: 4em 3em 0 0;
+	float: left;
+	margin: 4em 0 0 3em;
+	padding: 10px 5px;
+	border-left: 5px solid #85639C;
 }
