- 完成課表排序效能改進（500%，WoW）

--- a/current/public/css/caculate_index.css
+++ b/current/public/css/caculate_index.css
@@ -1,6 +1,7 @@
 .progress_history {
 	display: inline-block;
 	padding: 5px;
+	vertical-align: top;
 	font-size: 110%;
 }
 
@@ -16,4 +17,9 @@
 
 .progress_history .item {
 	padding-left: 10px;
+}
+
+.progress_history strong {
+	color: red;
+	font-style: italic;
 }
