- 修正排課錯誤 - 調整helper

--- a/current/public/css/global/default.css
+++ b/current/public/css/global/default.css
@@ -89,12 +89,20 @@ nav .nav_title {
 
 nav a {
 	display: block;
-	padding: 0.5em 0 0.5em 1em;
+	margin: 5px 0;
+	padding: 0.3em 0 0.3em 15px;
 	color: #666666;
 }
 
 nav a:hover {
 	background-color: #dddddd;
+}
+
+nav .selected {
+	padding-left: 10px;
+	border-left: 5px solid #A20025;
+	color: #A20025;
+	font-weight: bold;
 }
 
 /**
