--- a/current/public/css/table/query.css
+++ b/current/public/css/table/query.css
@@ -3,10 +3,17 @@
 	margin: 0.5em 0 0 1.5em;
 }
 
+#course_time_selector hr {
+	height: 0;
+	border: 1px solid #000000;
+	color: #000000;
+}
+
 #course_time_selector .course {
 	width: 5em;
 	height: 3em;
 	color: black !important;
+	vertical-align: top;
 	text-align: center;
 }
 
