- 加入排課衝突顯示功能 - 修正編輯排課設定課程限制的錯誤

--- a/current/public/css/caculate_index.css
+++ b/current/public/css/caculate_index.css
@@ -23,3 +23,14 @@
 	color: red;
 	font-style: italic;
 }
+
+#error_courseunit {
+	float: left;
+	margin: 1em 0 0 1em;
+	padding: 10px 5px;
+	border-top: 5px solid #85639c;
+}
+
+#first_error a {
+	background-color: red;
+}
