--- a/current/public/css/form/account.css
+++ b/current/public/css/form/account.css
@@ -18,3 +18,10 @@
 	margin-bottom: 0.5em;
 	font-weight: bold;
 }
+
+#teacher_courseunit {
+	float: left;
+	margin: 4em 0 0 3em;
+	padding: 10px 5px;
+	border-left: 5px solid #85639C;
+}
