- 修改結果樣式 - 大幅改進計算效能（更換usort為array_multisort、減少資料庫的查詢）

--- a/current/public/css/caculate.css
+++ b/current/public/css/caculate.css
@@ -24,6 +24,14 @@
 	font-style: italic;
 }
 
+.progress_history sup {
+	font-size: xx-small;
+}
+
+.progress_history .progross {
+	color: green;
+}
+
 #error_courseunit {
 	float: left;
 	margin: 1em 0 0 1em;
