- 新增顯示教師設定排課需求 - 排課錯誤畫面調整，加入使用教室超連結

--- a/current/public/css/caculate.css
+++ b/current/public/css/caculate.css
@@ -39,6 +39,10 @@
 	border-top: 5px solid #85639c;
 }
 
-#first_error a {
-	background-color: red;
+#error_courseunit a {
+	display: inline-block;
+}
+
+#first_error {
+	border: 5px solid red;
 }
