--- a/current/public/css/account.css
+++ b/current/public/css/account.css
@@ -22,6 +22,23 @@
 }
 
 /**
+ * 	設定需求樣式
+ */
+.is_require {
+	padding-right: 5px !important;
+	width: 5em;
+	text-align: center;
+}
+
+.is_require div {
+	padding: 5px;
+	border-radius: 7px;
+	background-color: #60a917;
+	color: #FFFFFF;
+	text-shadow: 1px 1px #111111;
+}
+
+/**
  * 	管理者樣式
  */
 .is_admin {
